--- a/style.css
+++ b/style.css
@@ -10,46 +10,40 @@ body {
 	max-width: 390px;
 }
 
+
 .inner {
 	display: grid;
-	grid-template-columns: 1fr 1fr;
-	grid-template-rows: 200px 200px 200px;
+	grid-template-columns: 1fr;
+	grid-template-rows: 175px 60px;
 }
 
+
 .img {
-	width: 130px;
+	display: block;
+	width: 370px;
+	padding: 10px;
 }
+
 
 .item {
 	text-align: center;
 }
 
+
 .btn {
 	display: inline-block;
-	padding: 10px 20px;
-	border: none;
-	background: rgb(248, 168, 24);
+	width: 280px;
+	height: 30px;
+	padding: 7px 0px;
+
+	background: rgba(136, 136, 136, 0.815);
 	border-radius: 10px;
 	color: #fff;
 	text-transform: uppercase;
-	font-weight: 700;
-
-	transition: background .2s linear;
+	font-weight: 200;
+	transition: background .2s linear
 }
 
 .btn:hover {
 	background: lightgreen;
 }
-
-.usercard {
-	text-align: center;
-}
-
-/*
-var(--tg-theme-bg-color)
-var(--tg-theme-text-color)
-var(--tg-theme-hint-color)
-var(--tg-theme-link-color)
-var(--tg-theme-button-color)
-var(--tg-theme-button-text-color)
-*/
