--- a/style.css
+++ b/style.css
@@ -14,22 +14,25 @@ body {
 #main {
     width: 100%;
     padding: 20px;
-    margin: 0 auto;
+    text-alight: center;
 }
 
 h1 {
     margin-top: 50px;
     margin-bottom: 10 px;
+    display: inline-block;
 }
 
 img {
     width: 70px;
     margin: 30px auto;
+    display: inline-block;
 }
 
 p {
     width: 350px;
     margin: 0 auto;
+    display: inline-block;
 }
 
 button {
@@ -44,6 +47,7 @@ button {
     transition: all 500ms ease;
     color: var(--tg-theme-button-color);
     background: var(--tg-theme-button-text-color);
+    display: inline-block;
 }
 
 button: hover {
