--- a/style.css
+++ b/style.css
@@ -14,25 +14,24 @@ body {
 #main {
     width: 100%;
     padding: 20px;
-    text-alight: center;
 }
 
 h1 {
     margin-top: 50px;
     margin-bottom: 10 px;
-    display: inline-block;
+    margin: 0 auto;
 }
 
 img {
     width: 70px;
     margin: 30px auto;
-    display: inline-block;
+    margin: 0 auto;
 }
 
 p {
     width: 350px;
     margin: 0 auto;
-    display: inline-block;
+    margin: 0 auto;
 }
 
 button {
@@ -47,7 +46,7 @@ button {
     transition: all 500ms ease;
     color: var(--tg-theme-button-color);
     background: var(--tg-theme-button-text-color);
-    display: inline-block;
+    margin: 0 auto;
 }
 
 button: hover {
