--- a/style.css
+++ b/style.css
@@ -14,23 +14,21 @@ body {
 #main {
     width: 100%;
     padding: 20px;
+    text-alight: center;
 }
 
 h1 {
     margin-top: 50px;
     margin-bottom: 10 px;
-    margin: 0 auto;
 }
 
 img {
     width: 70px;
     margin: 30px auto;
-    margin: 0 auto;
 }
 
 p {
     width: 350px;
-    margin: 0 auto;
     margin: 0 auto;
 }
 
@@ -46,7 +44,6 @@ button {
     transition: all 500ms ease;
     color: var(--tg-theme-button-color);
     background: var(--tg-theme-button-text-color);
-    margin: 0 auto;
 }
 
 button: hover {
