--- a/style.css
+++ b/style.css
@@ -1,70 +1,89 @@
-* {
+body {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-}
-
-body {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 200;
+    font-size: 18px;
     color: var(--tg-theme-text-color);
     background: var(--tg-theme-bg-color);
+    background-repeat: no-repeat;
 }
 
-#main {
-    width: 100%;
-    padding: 20px;
-    text-alight: center;
+.container {
+    max-width: 230px;
+    max-height: 390px;
+    
 }
 
-h1 {
-    margin-top: 50px;
-    margin-bottom: 10 px;
+.btn {
+    display: inline-block;
+    padding: 10px 20 px;
+    border: none;
+    background: #007E3E;
+    border-radius: 10px
+    color: #fff
+    text-transform: uppercase;
+    font-weight: 700;
 }
 
-img {
-    width: 70px;
-    margin: 30px auto;
+.btn:hover {
+    lightgreen;
 }
 
-p {
-    width: 350px;
-    margin: 0 auto;
-}
-
-button {
-    border: 0;
+.title {
+    background: rgb(145, 195, 63);
+    padding: 10px;
     border-radius: 5px;
-    margin-top: 50px;
-    height: 60px;
-    width: 200px;
-    font-size: 20px;
-    font-weight: 500;
-    cursor: pointer;
-    transition: all 500ms ease;
-    color: var(--tg-theme-button-color);
-    background: var(--tg-theme-button-text-color);
+    opacity: .7;
+    position: absolute;
+    top: 5px;
+    height: 7px;
+    width: 210px;
 }
 
-button: hover {
-    background: var(--tg-theme-button-text-color);
-}
-
-#form {
-    display: none;
-    text-alight: center;
-}
-
-input {
-    width: 90%;
-    outline: none;
-    margin: 10px 5%;
-    padding: 15px 10px;
-    font-size: 14 px;
-    border: 2px solid silver;
+.title2 {
+    background: rgb(145, 195, 63);
+    padding: 10px;
     border-radius: 5px;
+    opacity: .7;
+    position: absolute;
+    top: 150px;
+    height: 7px;
+    width: 210px;
 }
 
-input:focus {
-    border-color: #db5d5d;
+.hero_name {
+    text-shadow: black .5px .5px 0, black -.5px -.5px 0,
+    black -.5px .5px 0, black .5px -.5px 0;
+    color: #fff;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    height: 7px;
+    font-weight: bold;
+}
+
+.hero_class {
+    color: #000;
+    position: absolute;
+    top: 35px;
+    left: 10px;
+    height: 7px;
+    font-size: 10pt;
+}
+
+.hero_stats {
+    color: #000;
+    position: absolute;
+    top: 155px;
+    left: 10px;
+    height: 7px;
+    font-size: 10pt;
+}
+
+.back {
+    padding: 10px;
+    border-radius: 10px;
+    position: relative;
+    top: 0px;
+    height: 290px;
+    border: 5px solid black;
 }
