--- a/style.css
+++ b/style.css
@@ -15,8 +15,9 @@ body {
     background: rgb(145, 195, 63);
     padding: 10px;
     border-radius: 5px;
-    opacity: .7;
     position: relative;
     width: 250px;
     height: 390px;
+    margin-left: auto;
+    margin-right: auto;
 }
