--- a/style.css
+++ b/style.css
@@ -1,70 +1,25 @@
 body {
     margin: 0;
     padding: 0;
-    font-size: 18px;
     color: var(--tg-theme-text-color);
     background: var(--tg-theme-bg-color);
     font-family: 'Montserrat';
+    font-size: 18px;
 }
 
 .container {
-    max-width: 390px;
+    max-width: 400px;
+    max-height: 650px;
 }
 
-.back {
-    padding: 10px;
-    border-radius: 5px;
-    position: relative;
-    width: 250px;
-    height: 390px;
-    top: 5px;
-    margin-left: auto;
-    margin-right: auto;
-    outline: 4px solid #000;
+.grid {
+    border: 5px solid black;
+    display: grid;
+    grid-template-columns: repeat(10, 39px);
+    grid-template-rows: repeat(20, 36px);
 }
 
-.title {
-    background: rgb(212, 227, 134);
-    padding: 10px;
-    border-radius: 5px 5px 0px 0px;
-    position: absolute;
-    width: 250px;
-    height: 15px;
-    top: 0px;
-    left: 0px;
-}
-
-.title2 {
-    background: rgb(212, 227, 134);
-    padding: 10px;
-    position: absolute;
-    width: 250px;
-    height: 10px;
-    top: 185px;
-    left: 0px;
-}
-
-.hero_name {
-    color: #fff;
-    position: absolute;
-    top: 5px;
-    left: 10px;
-    -webkit-text-stroke: .5px black;
-    font-size: 22px;
-}
-
-.hero_class {
-    color: #000;
-    position: absolute;
-    top: 40px;
-    left: 10px;
-    font-size: 10px;
-}
-
-.hero_skill {
-    color: #000;
-    position: absolute;
-    top: 195px;
-    left: 10px;
-    font-size: 10px;
+.grid > * {
+    background-color: #ffbf94;
+    margin: 1px;
 }
