--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@ body {
 
 .grid {
     display: grid;
-    grid-template-columns: 10px 5px repeat(12, 1fr) 5px 10px;
-    grid-template-rows: 5px 5px repeat(20, 25px) 5px 5px;
+    grid-template-columns: 25px 5px repeat(12, 1fr) 5px 25px;
+    grid-template-rows: 5px 5px repeat(18, 23px) 5px 10px 35px 10px 5px;
 }
 
 .oblast-1 {
@@ -29,23 +29,31 @@ body {
 .oblast-2 {
     background: black;
     grid-row-start: 2;
-    grid-row-end: 24;
+    grid-row-end: 22;
     grid-column-start: 2;
     grid-column-end: 2;
 }
 
 .oblast-3 {
     background: black;
-    grid-row-start: 23;
-    grid-row-end: 23;
-    grid-column-start: 2;
+    grid-row-start: 21;
+    grid-row-end: 21;
+    grid-column-start: 3;
     grid-column-end: 15;
 }
 
 .oblast-4 {
     background: black;
     grid-row-start: 2;
-    grid-row-end: 24;
+    grid-row-end: 22;
     grid-column-start: 15;
+    grid-column-end: 15;
+}
+
+.oblast-5 {
+    background: green;
+    grid-row-start: 23;
+    grid-row-end: 23;
+    grid-column-start: 3;
     grid-column-end: 15;
 }
