--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 .grid {
     display: grid;
     grid-template-columns: 25px 5px repeat(12, 1fr) 5px 25px;
-    grid-template-rows: 5px 5px repeat(18, 23px) 5px 10px 35px 10px 5px;
+    grid-template-rows: 5px 5px 30px repeat(17, 23px) 5px 10px 35px 10px 5px;
 }
 
 .oblast-1 {
@@ -54,6 +54,22 @@ body {
     background: green;
     grid-row-start: 23;
     grid-row-end: 23;
+    grid-column-start: 3;
+    grid-column-end: 15;
+}
+
+.oblast-6 {
+    background: rgb(212, 227, 134);
+    grid-row-start: 3;
+    grid-row-end: 4;
+    grid-column-start: 3;
+    grid-column-end: 15;
+}
+
+.oblast-7 {
+    background: rgb(212, 227, 134);
+    grid-row-start: 11;
+    grid-row-end: 12;
     grid-column-start: 3;
     grid-column-end: 15;
 }
