--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ body {
     grid-row-end: 23;
     grid-column-start: 3;
     grid-column-end: 15;
+    text-align: center;
 }
 
 .oblast-6 {
@@ -64,6 +65,8 @@ body {
     grid-row-end: 4;
     grid-column-start: 3;
     grid-column-end: 15;
+    padding-left: 10px;
+    padding-top: 3px;
 }
 
 .oblast-7 {
@@ -72,4 +75,13 @@ body {
     grid-row-end: 12;
     grid-column-start: 3;
     grid-column-end: 15;
+    padding-left: 10px;
+    padding-top: 2px;
+}
+
+.oblast-5::before, .oblast-6::before, .oblast-7::before {
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle;
+    content: ""
 }
