--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 
 .grid {
     display: grid;
-    grid-template-columns: 20px 5px 155px 29px repeat(8, 4px 15px) 4px 5px 20px;
+    grid-template-columns: 20px 5px 158px 30px repeat(8, 4px 15px) 5px 20px;
     grid-template-rows: 5px 5px 20px 139px 25px repeat(11, 2px 2px 15px) 3px 5px 10px 30px 10px 5px;
 }
 
@@ -24,66 +24,29 @@ body {
     grid-row-start: 2;
     grid-row-end: 3;
     grid-column-start: 2;
-    grid-column-end: 23;
+    grid-column-end: 22;
 }
 
 .oblast-2 {
     background: black;
-    grid-row-start: 2;
+    grid-row-start: 40;
     grid-row-end: 41;
     grid-column-start: 2;
-    grid-column-end: 2;
+    grid-column-end: 22;
 }
 
 .oblast-3 {
     background: black;
-    grid-row-start: 40;
+    grid-row-start: 2;
     grid-row-end: 41;
     grid-column-start: 2;
-    grid-column-end: 23;
+    grid-column-end: 3;
 }
 
 .oblast-4 {
     background: black;
     grid-row-start: 2;
     grid-row-end: 41;
-    grid-column-start: 22;
+    grid-column-start: 21;
     grid-column-end: 22;
-}
-
-.oblast-5 {
-    background: green;
-    grid-row-start: 7;
-    grid-row-end: 9;
-    grid-column-start: 3;
-    grid-column-end: 5;
-    text-align: center;
-}
-
-.oblast-6 {
-    background: rgb(212, 227, 134);
-    grid-row-start: 3;
-    grid-row-end: 4;
-    grid-column-start: 3;
-    grid-column-end: 5;
-    padding-left: 10px;
-    padding-top: 3px;
-}
-
-.oblast-7 {
-    background: rgb(212, 227, 134);
-    grid-row-start: 25;
-    grid-row-end: 28;
-    grid-column-start: 3;
-    grid-column-end: 51;
-    padding-left: 10px;
-    padding-top: 2px;
-    font-size: 12px;
-}
-
-.oblast-5::before, .oblast-6::before, .oblast-7::before {
-    display: inline-block;
-    height: 100%;
-    vertical-align: middle;
-    content: ""
 }
